--- a/AutoHome/app/src/main/res/layout-land/activity_main.xml
+++ b/AutoHome/app/src/main/res/layout-land/activity_main.xml
@@ -7,34 +7,34 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tempTextView"
         android:layout_width="40dp"
         android:layout_height="25dp"
         android:layout_marginTop="16dp"
         android:text="12.5"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@+id/ambientTempTextView"
+        app:layout_constraintStart_toStartOf="@+id/ambientTempTextView"
+        app:layout_constraintTop_toBottomOf="@+id/ambientTempTextView" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/ambientTempTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Ambient Temperature"
+        android:text="@string/ambient_temperature"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/ChannelADC3TextView"
         android:layout_width="90dp"
         android:layout_height="25dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="65dp"
-        android:contentDescription="Channel_ADC3"
+        android:contentDescription="@string/channel_adc5"
         android:text="Channel_ADC3"
         android:textAlignment="center"
         android:textSize="12sp"
@@ -42,33 +42,33 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/ChannelADC4TextView"
         android:layout_width="90dp"
         android:layout_height="25dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="65dp"
-        android:contentDescription="Channel_ADC3"
+        android:contentDescription="@string/channel_adc4"
         android:text="Channel_ADC4"
         android:textAlignment="center"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/ChannelADC3TextView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/ChannelADC5TextView"
         android:layout_width="90dp"
         android:layout_height="25dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="65dp"
-        android:contentDescription="Channel_ADC5"
+        android:contentDescription="@string/channel_adc5"
         android:text="Channel_ADC5"
         android:textAlignment="center"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/ChannelADC4TextView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/ChannelADC3ValueTextView"
         android:layout_width="32dp"
         android:layout_height="23dp"
         android:layout_marginStart="40dp"
@@ -76,154 +76,154 @@
         android:text="511"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/ChannelADC3TextView" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/ChannelADC4ValueTextView"
         android:layout_width="32dp"
         android:layout_height="23dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="16dp"
         android:text="511"
         android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintStart_toEndOf="@+id/ChannelADC3ValueTextView"
+        app:layout_constraintTop_toBottomOf="@+id/ChannelADC4TextView" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/ChannelADC5ValueTextView"
         android:layout_width="32dp"
         android:layout_height="23dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="16dp"
         android:text="511"
         android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintStart_toEndOf="@+id/ChannelADC4ValueTextView"
+        app:layout_constraintTop_toBottomOf="@+id/ChannelADC5TextView" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/DAC1OUTTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
-        android:text="DAC1OUT"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        android:text="@string/dac1out"
+        app:layout_constraintStart_toEndOf="@+id/addButton"
+        app:layout_constraintTop_toBottomOf="@+id/ChannelADC4ValueTextView" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/DAC1OUTValueTextView"
         android:layout_width="60dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="16"
         android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintStart_toEndOf="@+id/addButton"
+        app:layout_constraintTop_toBottomOf="@+id/DAC1OUTTextView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="+"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/ChannelADC3ValueTextView"
         tools:text="+" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/subButton"
         android:layout_width="89dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:text="-"
-        app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintStart_toEndOf="@+id/DAC1OUTValueTextView"
+        app:layout_constraintTop_toBottomOf="@+id/ChannelADC5ValueTextView"
         tools:text="-" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/PWM3TextView"
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
-        android:text="PWM3-MOTOR DUTY"
+        android:text="@string/pwm6"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/DAC1OUTValueTextView" />
 
     <ProgressBar
-        android:id="@+id/progressBar2"
+        android:id="@+id/PWM6ProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="303dp"
         android:layout_height="75dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:layout_constraintTop_toBottomOf="@+id/PWM3TextView" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/PWM4TextView"
         android:layout_width="59dp"
         android:layout_height="21dp"
         android:layout_marginStart="128dp"
         android:layout_marginTop="65dp"
-        android:text="PWM4"
+        android:text="@string/pwm3"
         android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/tempTextView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/PWM5TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="PWM5"
+        android:text="@string/pwm4"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/seekBar4"
-        app:layout_constraintStart_toStartOf="@+id/seekBar4"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar4" />
+        app:layout_constraintEnd_toEndOf="@+id/PWM3SeekBar"
+        app:layout_constraintStart_toStartOf="@+id/PWM3SeekBar"
+        app:layout_constraintTop_toBottomOf="@+id/PWM3SeekBar" />
 
     <SeekBar
-        android:id="@+id/seekBar4"
+        android:id="@+id/PWM3SeekBar"
         android:layout_width="250dp"
         android:layout_height="35dp"
         android:layout_marginTop="16dp"
-        android:thumb="100"
-        app:layout_constraintEnd_toEndOf="@+id/textView14"
-        app:layout_constraintStart_toStartOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        android:max="100"
+        app:layout_constraintEnd_toEndOf="@+id/PWM4TextView"
+        app:layout_constraintStart_toStartOf="@+id/PWM4TextView"
+        app:layout_constraintTop_toBottomOf="@+id/PWM4TextView" />
 
     <SeekBar
-        android:id="@+id/seekBar5"
+        android:id="@+id/PWM4SeekBar"
         android:layout_width="250dp"
         android:layout_height="35dp"
         android:layout_marginTop="8dp"
         android:max="100"
-        app:layout_constraintEnd_toEndOf="@+id/textView15"
-        app:layout_constraintStart_toStartOf="@+id/textView15"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintEnd_toEndOf="@+id/PWM5TextView"
+        app:layout_constraintStart_toStartOf="@+id/PWM5TextView"
+        app:layout_constraintTop_toBottomOf="@+id/PWM5TextView" />
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/PWM6TextView"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:layout_marginTop="16dp"
-        android:text="PWM6"
-        app:layout_constraintEnd_toEndOf="@+id/seekBar5"
-        app:layout_constraintStart_toStartOf="@+id/seekBar5"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar5" />
+        android:text="@string/pwm5"
+        app:layout_constraintEnd_toEndOf="@+id/PWM4SeekBar"
+        app:layout_constraintStart_toStartOf="@+id/PWM4SeekBar"
+        app:layout_constraintTop_toBottomOf="@+id/PWM4SeekBar" />
 
     <SeekBar
-        android:id="@+id/seekBar6"
+        android:id="@+id/PWM5SeekBar"
         android:layout_width="250dp"
         android:layout_height="35dp"
         android:layout_marginTop="16dp"
         android:max="100"
-        app:layout_constraintEnd_toEndOf="@+id/textView17"
-        app:layout_constraintStart_toStartOf="@+id/textView17"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintEnd_toEndOf="@+id/PWM6TextView"
+        app:layout_constraintStart_toStartOf="@+id/PWM6TextView"
+        app:layout_constraintTop_toBottomOf="@+id/PWM6TextView" />
 
 </android.support.constraint.ConstraintLayout>
