--- a/AutoHome/app/src/main/res/layout/activity_main.xml
+++ b/AutoHome/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="12.5"
+        android:fontFamily="@font/fira_mono"
         android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/ambientTempTextView"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="@+id/ambientTempTextView"
         app:layout_constraintTop_toBottomOf="@+id/ambientTempTextView" />
 
@@ -25,6 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/ambient_temperature"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,88 +37,92 @@
 
     <TextView
         android:id="@+id/ChannelADC3TextView"
-        android:layout_width="85dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="96dp"
         android:contentDescription="@string/channel_adc3"
-        android:text="Channel_ADC3"
+        android:text="ADC3"
         android:textAlignment="center"
-        android:textSize="12sp"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/ChannelADC4TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />
+        app:layout_constraintTop_toTopOf="@+id/ChannelADC4TextView" />
 
     <TextView
         android:id="@+id/ChannelADC4TextView"
-        android:layout_width="85dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:contentDescription="@string/channel_adc4"
-        android:text="Channel_ADC4"
+        android:text="ADC4"
         android:textAlignment="center"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/ChannelADC3TextView"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/tempTextView"
+        app:layout_constraintStart_toStartOf="@+id/tempTextView"
         app:layout_constraintTop_toBottomOf="@+id/tempTextView" />
 
     <TextView
         android:id="@+id/ChannelADC5TextView"
-        android:layout_width="85dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
         android:contentDescription="@string/channel_adc5"
-        android:text="Channel_ADC5"
+        android:text="ADC5"
         android:textAlignment="center"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/ChannelADC4TextView"
-        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />
+        app:layout_constraintTop_toTopOf="@+id/ChannelADC4TextView" />
 
     <TextView
         android:id="@+id/ChannelADC3ValueTextView"
         android:layout_width="32dp"
         android:layout_height="23dp"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"
-        android:text="511"
+        android:fontFamily="@font/fira_mono"
         android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/ChannelADC3TextView"
+        app:layout_constraintStart_toStartOf="@+id/ChannelADC3TextView"
         app:layout_constraintTop_toBottomOf="@+id/ChannelADC3TextView" />
 
     <TextView
         android:id="@+id/ChannelADC4ValueTextView"
         android:layout_width="32dp"
         android:layout_height="23dp"
-        android:layout_marginStart="120dp"
         android:layout_marginTop="16dp"
-        android:text="511"
+        android:fontFamily="@font/fira_mono"
         android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@+id/ChannelADC3ValueTextView"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/ChannelADC4TextView"
+        app:layout_constraintStart_toStartOf="@+id/ChannelADC4TextView"
         app:layout_constraintTop_toBottomOf="@+id/ChannelADC4TextView" />
 
     <TextView
         android:id="@+id/ChannelADC5ValueTextView"
         android:layout_width="32dp"
         android:layout_height="23dp"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="30dp"
-        android:text="511"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ChannelADC4ValueTextView"
+        android:fontFamily="@font/fira_mono"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/ChannelADC5TextView"
+        app:layout_constraintStart_toStartOf="@+id/ChannelADC5TextView"
         app:layout_constraintTop_toBottomOf="@+id/ChannelADC5TextView" />
 
     <TextView
         android:id="@+id/DAC1OUTTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="@string/dac1out"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ChannelADC4ValueTextView" />
 
@@ -121,62 +130,60 @@
         android:id="@+id/DAC1OUTValueTextView"
         android:layout_width="60dp"
         android:layout_height="22dp"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:fontFamily="@font/fira_mono"
         android:textAlignment="center"
-        app:layout_constraintEnd_toStartOf="@+id/subButton"
-        app:layout_constraintStart_toEndOf="@+id/addButton"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/DAC1OUTTextView"
+        app:layout_constraintStart_toStartOf="@+id/DAC1OUTTextView"
         app:layout_constraintTop_toBottomOf="@+id/DAC1OUTTextView" />
 
     <Button
         android:id="@+id/subButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="32dp"
         android:text="-"
         app:layout_constraintEnd_toStartOf="@+id/DAC1OUTValueTextView"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ChannelADC3ValueTextView"
+        app:layout_constraintTop_toBottomOf="@+id/DAC1OUTTextView"
         tools:text="-" />
 
     <Button
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
         android:text="+"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/DAC1OUTValueTextView"
-        app:layout_constraintTop_toBottomOf="@+id/ChannelADC5ValueTextView"
+        app:layout_constraintTop_toBottomOf="@+id/DAC1OUTTextView"
         tools:text="+" />
 
     <TextView
         android:id="@+id/PWM3TextView"
         android:layout_width="wrap_content"
-        android:layout_height="21dp"
-        android:layout_marginStart="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="70dp"
         android:text="@string/pwm6"
         android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DAC1OUTValueTextView" />
 
     <ProgressBar
         android:id="@+id/PWM6ProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="303dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="70dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:progressTint="@color/orange"
+        android:progressBackgroundTint="@color/orange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PWM3TextView" />
@@ -186,10 +193,12 @@
         android:layout_width="60dp"
         android:layout_height="25dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="70dp"
         android:text="@string/pwm3"
         android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PWM6ProgressBar" />
@@ -198,34 +207,37 @@
         android:id="@+id/PWM5TextView"
         android:layout_width="60dp"
         android:layout_height="25dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginTop="32dp"
         android:text="@string/pwm4"
         android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PWM3SeekBar" />
 
     <SeekBar
         android:id="@+id/PWM3SeekBar"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="70dp"
+        android:layout_width="0dp"
+        android:layout_height="14dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="32dp"
         android:max="100"
+        android:thumbTint="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PWM4TextView" />
+        app:layout_constraintTop_toBottomOf="@+id/PWM4TextView"
+        tools:thumbTint="@color/red" />
 
     <SeekBar
         android:id="@+id/PWM4SeekBar"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="70dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="32dp"
+        android:thumbTint="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PWM5TextView" />
@@ -234,23 +246,24 @@
         android:id="@+id/PWM6TextView"
         android:layout_width="60dp"
         android:layout_height="25dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginTop="32dp"
         android:text="@string/pwm5"
         android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PWM4SeekBar" />
 
     <SeekBar
         android:id="@+id/PWM5SeekBar"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="70dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="32dp"
         android:max="100"
+        android:thumbTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PWM6TextView" />
