--- a/AutoHome/app/src/main/res/values/colors.xml
+++ b/AutoHome/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="red">#ff0000</color>
+    <color name="green">#64dd17</color>
+    <color name="blue">#2196f3</color>
+    <color name="orange">#FF3D00</color>
 </resources>
